--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1333,6 +1333,24 @@ These changes reflect concurrent declines in species adapted to cooler condition
   file = {C\:\\Users\\Me\\Zotero\\storage\\WTEQSY4U\\vaplantatlas.org.html}
 }
 
+@article{doughtyAreTropicalForests2008,
+  title = {Are Tropical Forests near a High Temperature Threshold?},
+  author = {Doughty, Christopher E. and Goulden, Michael L.},
+  date = {2008},
+  journaltitle = {Journal of Geophysical Research: Biogeosciences},
+  volume = {113},
+  issn = {2156-2202},
+  doi = {10.1029/2007JG000632},
+  url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2007JG000632},
+  urldate = {2020-09-18},
+  abstract = {We used leaf gas exchange, sap flow, and eddy covariance measurements to investigate whether high temperature substantially limits CO2 uptake at the LBA-ECO (Large-scale Biosphere-Atmosphere) km-83 tropical forest site in Brazil. Leaf-level temperature-photosynthesis curves, and comparisons of whole-canopy net ecosystem CO2 exchange (NEE) with air temperature, showed that CO2 uptake declined sharply during warm periods. Observations of ambient leaf microclimate showed that leaves oscillate between two states: a cool, dimly lit stage and a hot, brightly illuminated stage where leaf temperatures are often greater than 35°C. The leaf-level rates of photosynthesis decreased when shaded leaves (∼ambient air temperature and {$<$} 500 μmol m−2 s−1) were transferred into a prewarmed, brightly illuminated chamber (35° to 38°C and 1000 μmol m−2 s−1), coincident with increased leaf temperature, increased evaporative demand, and stomatal closure. The rates of whole-canopy CO2 uptake calculated at 5-min intervals increased initially at the onset of sunny periods that followed extended cloudy periods, but then decreased as the sunlight continued, leaf temperature and evaporative demand increased, and canopy conductance decreased. The forest at km-83 appears to be close to a high temperature threshold, above which CO2 uptake drops sharply. This sensitivity results in part from the covariance between leaf temperature and leaf illumination; the brightly illuminated leaves that contribute disproportionately to canopy photosynthesis are warmed to the point that leaf gas exchange is curtailed.},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2007JG000632},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7GXKRG58\\Doughty and Goulden - 2008 - Are tropical forests near a high temperature thres.pdf;C\:\\Users\\Me\\Zotero\\storage\\XTBWHPFN\\2007JG000632.html},
+  keywords = {Amazon,canopy conductance,eddy covariance,leaf gas exchange,temperature,tropical forest},
+  langid = {english},
+  number = {G1}
+}
+
 @article{duursmaVerticalCanopyGradients2006,
   title = {Vertical Canopy Gradients in {{δ13C}} Correspond with Leaf Nitrogen Content in a Mixed-Species Conifer Forest},
   author = {Duursma, R. A. and Marshall, J. D.},
