added mcdowell's citation

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3956,6 +3956,13 @@ These data demonstrate that light-dependent variation in the rate of development
   number = {20}
 }
 
+@online{PervasiveShiftsForest,
+  title = {Pervasive Shifts in Forest Dynamics in a Changing World | {{Science}}},
+  url = {https://science.sciencemag.org/content/368/6494/eaaz9463},
+  urldate = {2020-09-18},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SZUI46QS\\eaaz9463.html}
+}
+
 @article{phillipsCarbonUptakeMature2017,
   title = {Carbon Uptake by Mature {{Amazon}} Forests Has Mitigated {{Amazon}} Nations’ Carbon Emissions},
   author = {Phillips, Oliver L. and Brienen, Roel J. W. and Collaboration, the RAINFOR},
