--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5380,6 +5380,26 @@ Leaf Traits/ Photosynthesis/Solar Radiation},
   file = {C\:\\Users\\Me\\Zotero\\storage\\WW6XGKSH\\Valladares and Niinemets - 2008 - Shade Tolerance, a Key Plant Feature of Complex Na.pdf}
 }
 
+@article{valladaresSheddingLightShade2016,
+  title = {Shedding Light on Shade: Ecological Perspectives of Understorey Plant Life},
+  shorttitle = {Shedding Light on Shade},
+  author = {Valladares, Fernando and Laanisto, Lauri and Niinemets, Ülo and Zavala, Miguel A.},
+  date = {2016-05-03},
+  journaltitle = {Plant Ecology \& Diversity},
+  volume = {9},
+  pages = {237--251},
+  publisher = {{Taylor \& Francis}},
+  issn = {1755-0874},
+  doi = {10.1080/17550874.2016.1210262},
+  url = {https://doi.org/10.1080/17550874.2016.1210262},
+  urldate = {2020-09-21},
+  abstract = {Shade, in ecological sense, is not merely a lack of light, but a multi-faceted phenomenon that creates new and complex settings for community and ecosystem dynamics. Tolerating shade therefore affects plants’ ability to cope with other stressors, and also shape its interactions with surrounding organisms. The aim of this broad review was to map our current knowledge about how shade affects plants, plant communities and ecosystems – to gather together knowledge of what we know, but also to point out what we do not yet know. This review covers the following topics: the nature of shade, and ecological and physiological complexities related to growing under a canopy; plants’ capability of tolerating other stress factors while living under a shade – resource trade-offs and polytolerance of abiotic stress; ontogenetic effects of shade tolerance; coexistence patterns under the canopy – how shade determines the forest structure and diversity; shade-induced abiotic dynamics in understorey vegetation, including changing patterns of irradiance, temperature and humidity under the canopy; shade-driven plant–plant and plant–animal interactions – how shade mediates facilitation and stress, and how it creates differentiated environment for different herbivores and pollinators, including the role of volatile organic compounds. We also discuss the ways how vegetation in understorey environments will be affected by climate change, as shade might play a significant role in mitigating negative effects of climate change. Our review shows that living under a shade affects biotic and abiotic stress tolerance of plants, it also influences the outcomes of both symbiotic and competitive plant–plant and plant–animal interactions in a complex and dynamic manner. The current knowledge of shade-related mechanisms is rather ample, however there is much room for progress in integrating different implications of the multifaceted nature of shade into consistent and integral understanding how communities and ecosystems function.},
+  annotation = {\_eprint: https://doi.org/10.1080/17550874.2016.1210262},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\J2N2YYR2\\Valladares et al. - 2016 - Shedding light on shade ecological perspectives o.pdf;C\:\\Users\\Me\\Zotero\\storage\\GKCI3G7G\\17550874.2016.html},
+  keywords = {global change,Grubb-Reviews,herbivory,multiple stresses,plant–plant interactions,shade,stress polytolerance,understorey vegetation},
+  number = {3}
+}
+
 @article{vanwittenbergheVariabilityStomatalConductance2012,
   title = {Variability of Stomatal Conductance, Leaf Anatomy, and Seasonal Leaf Wettability of Young and Adult {{European}} Beech Leaves along a Vertical Canopy Gradient},
   author = {Van Wittenberghe, Shari and Adriaenssens, Sandy and Staelens, Jeroen and Verheyen, Kris and Samson, Roeland},
