--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1672,6 +1672,25 @@ These changes reflect concurrent declines in species adapted to cooler condition
   file = {C\:\\Users\\Me\\Zotero\\storage\\BNAP67MH\\13580.html}
 }
 
+@article{griffinCanopyPositionAffects2002,
+  title = {Canopy Position Affects the Temperature Response of Leaf Respiration in {{Populus}} Deltoides},
+  author = {Griffin, Kevin L. and Turnbull, Matthew and Murthy, Ramesh},
+  date = {2002},
+  journaltitle = {New Phytologist},
+  volume = {154},
+  pages = {609--619},
+  issn = {1469-8137},
+  doi = {10.1046/j.1469-8137.2002.00410.x},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1046/j.1469-8137.2002.00410.x},
+  urldate = {2020-09-23},
+  abstract = {• Leaf respiration and its temperature response were measured in 4-m-tall, 1-yr-old Populus deltoides trees to assess the effect of within-canopy distribution of respiratory physiology on total foliar C exchange of a model ecosystem at Biosphere 2. • Over the course of five nights, air temperature was varied over a 10°C range and the steady-state rate of leaf respiration was measured. These data were then modeled to calculate the temperature response of leaf and canopy respiration. • Results indicate that there is considerable within-canopy variation in both the rate of respiration and its temperature response and that these variables are most strongly related to leaf carbohydrate and leaf N. Scaling these results to the ecosystem level demonstrates the importance of quantifying the vertical distribution of respiratory physiology, particularly at lower temperatures. • Simplifying assumptions regarding the variation in respiration and its temperature response with canopy height tend to result in an underestimation of the actual C loss if the assumptions are based on lower- or mid-canopy leaf physiology, but overestimate C loss if the model assumptions are based on upper-canopy physiology.},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2002.00410.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XZQJVCJW\\Griffin et al. - 2002 - Canopy position affects the temperature response o.pdf;C\:\\Users\\Me\\Zotero\\storage\\LT9FTM6B\\j.1469-8137.2002.00410.html},
+  keywords = {Biosphere 2,carbohydrates,nitrogen,Populus deltoides (cottonwood),Q10,respiration,scaling,temperature},
+  langid = {english},
+  number = {3}
+}
+
 @online{GrowthResponseClimate,
   title = {Growth Response to Climate and Drought in {{Pinus}} Nigra {{Arn}}. Trees of Different Crown Classes | {{SpringerLink}}},
   url = {https://link-springer-com.smithsonian.idm.oclc.org/article/10.1007/s00468-007-0191-6},
@@ -4505,7 +4524,7 @@ Leaf Traits/ Photosynthesis/Solar Radiation},
   pages = {336},
   issn = {00218901},
   doi = {10.2307/2403590},
-  eprint = {2403590?origin=crossref},
+  eprint = {2403590},
   eprinttype = {jstor},
   file = {C\:\\Users\\Me\\Zotero\\storage\\Q7ZJPBQY\\Roberts et al. - 1990 - Stomatal and Boundary-Layer Conductances in an Ama.pdf},
   langid = {english},
