--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -448,6 +448,20 @@
   note = {Library Catalog: www.google.com}
 }
 
+@online{BiodiversityMeetsAtmosphere,
+  title = {Biodiversity {{Meets}} the {{Atmosphere}}: {{A Global View}} of {{Forest Canopies}} | {{Science}}},
+  url = {https://science.sciencemag.org/content/301/5630/183.abstract},
+  urldate = {2020-09-28},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PRKSZLZ4\\183.html}
+}
+
+@online{BiodiversityMeetsAtmospherea,
+  title = {Biodiversity {{Meets}} the {{Atmosphere}}: {{A Global View}} of {{Forest Canopies}} | {{Science}}},
+  url = {https://science.sciencemag.org/content/301/5630/183.full},
+  urldate = {2020-09-28},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HPIPKI63\\183.html}
+}
+
 @article{bolstad_foliar_1999,
   title = {Foliar Temperature–Respiration Response Functions for Broad-Leaved Tree Species in the Southern {{Appalachians}}},
   author = {Bolstad, Paul V. and Mitchell, Katherine and Vose, James M.},
@@ -599,6 +613,23 @@
   eprint = {2260066},
   eprinttype = {jstor},
   file = {C\:\\Users\\Me\\Zotero\\storage\\MCN7S6Q5\\Chazdon and Fetcher - 1984 - Photosynthetic Light Environments in a Lowland Tro.pdf},
+  number = {2}
+}
+
+@article{chazdonPhotosyntheticLightEnvironments1984a,
+  title = {Photosynthetic {{Light Environments}} in a {{Lowland Tropical Rain Forest}} in {{Costa Rica}}},
+  author = {Chazdon, Robin L. and Fetcher, Ned},
+  date = {1984},
+  journaltitle = {Journal of Ecology},
+  volume = {72},
+  pages = {553--564},
+  publisher = {{[Wiley, British Ecological Society]}},
+  issn = {0022-0477},
+  doi = {10.2307/2260066},
+  abstract = {(1) Measurements of photosynthetic photon flux density (PPFD) in four sites within a lowland tropical rain forest were compared. The habitats investigated were a 0.5 ha clearing, a 400 m2 gap, a 200 m2 gap, and heavily shaded understorey. (2) Measurements were made during both wet and dry seasons under a variety of weather conditions. Quantum sensors were used to monitor continuously 10-min average PPFD over a 3-10 day period at each location. Daily average PPFD, total daily PPFD, and daily frequency distributions were analysed for two adjacent sensors per site on each sampling day. (3) Daily total PPFD in the understorey, 200 m2 gap, and 400 m2 gap were 1-2\%, 9\%, and 20-35\%, respectively, of PPFD in the clearing. Daily total PPFD in the 400 m2 gap during the dry season was, on average, 2.4 times greater than in the 200 m2 gap, and 20-25 times those in the understorey. In the 200 m2 gap, daily total PPFD was nine times greater than in the understorey during the dry season. (4) In the clearing, PPFD was significantly different between seasons with 24\% higher PPFD during the dry season. In the 400 m2 gap and understorey, PPFD was not significantly different between seasons. (5) The percentage of available PPFD reaching the understorey was highest on cloudy, overcast days and lowest on sunny days. No correlation was found between daily total PPFD in the 400 m2 gap centre and in the adjacent understorey measured on the same days. (6) In the clearing, a high proportion of 10-min averages were greater than 500 μ mol m-2 s-1; in the 400 m2 gap, a high proportion of 10-min averages were between 100 μ mol m-2 s-1 and 500 μ mol m-2 s-1; in the understorey over 70\% of the 10-min averages were below 10 μ mol m-2 s-1. The clearing exhibited the greatest diurnal variation in PPFD and the least day-to-day variation, whereas the understorey exhibited the least diurnal variation and the greatest day-to-day variation in PPFD.},
+  eprint = {2260066},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MSAF56F6\\Chazdon and Fetcher - 1984 - Photosynthetic Light Environments in a Lowland Tro.pdf},
   number = {2}
 }
 
@@ -2987,6 +3018,40 @@ Leaf Traits/ Leaf Temperature/Biophysical+Traits},
   number = {6}
 }
 
+@article{nakamuraForestsTheirCanopies2017,
+  title = {Forests and {{Their Canopies}}: {{Achievements}} and {{Horizons}} in {{Canopy Science}}},
+  shorttitle = {Forests and {{Their Canopies}}},
+  author = {Nakamura, Akihiro and Kitching, Roger L. and Cao, Min and Creedy, Thomas J. and Fayle, Tom M. and Freiberg, Martin and Hewitt, C.N. and Itioka, Takao and Koh, Lian Pin and Ma, Keping and Malhi, Yadvinder and Mitchell, Andrew and Novotny, Vojtech and Ozanne, Claire M.P. and Song, Liang and Wang, Han and Ashton, Louise A.},
+  date = {2017-06},
+  journaltitle = {Trends in Ecology \& Evolution},
+  volume = {32},
+  pages = {438--451},
+  issn = {01695347},
+  doi = {10.1016/j.tree.2017.02.020},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534717300599},
+  urldate = {2020-09-28},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2BZEH3PN\\Nakamura et al. - 2017 - Forests and Their Canopies Achievements and Horiz.pdf},
+  langid = {english},
+  number = {6}
+}
+
+@article{nakamuraForestsTheirCanopies2017a,
+  title = {Forests and {{Their Canopies}}: {{Achievements}} and {{Horizons}} in {{Canopy Science}}},
+  shorttitle = {Forests and {{Their Canopies}}},
+  author = {Nakamura, Akihiro and Kitching, Roger L. and Cao, Min and Creedy, Thomas J. and Fayle, Tom M. and Freiberg, Martin and Hewitt, C.N. and Itioka, Takao and Koh, Lian Pin and Ma, Keping and Malhi, Yadvinder and Mitchell, Andrew and Novotny, Vojtech and Ozanne, Claire M.P. and Song, Liang and Wang, Han and Ashton, Louise A.},
+  date = {2017-06},
+  journaltitle = {Trends in Ecology \& Evolution},
+  volume = {32},
+  pages = {438--451},
+  issn = {01695347},
+  doi = {10.1016/j.tree.2017.02.020},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534717300599},
+  urldate = {2020-09-28},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\5RUWP2WT\\Nakamura et al. - 2017 - Forests and Their Canopies Achievements and Horiz.pdf},
+  langid = {english},
+  number = {6}
+}
+
 @article{nievola_rapid_2017,
   title = {Rapid Responses of Plants to Temperature Changes},
   author = {Nievola, Catarina C. and Carvalho, Camila P. and Carvalho, Victória and Rodrigues, Edson},
@@ -3821,6 +3886,27 @@ These data demonstrate that light-dependent variation in the rate of development
   abstract = {Request PDF | Overstory structure and topographic gradients determining diversity and abundance of understory shrub species in temperate forests in central Pyrenees (NE Spain) | Understanding the factors that determine the distributions of understory plants is important because they represent the largest component of... | Find, read and cite all the research you need on ResearchGate},
   file = {C\:\\Users\\Me\\Zotero\\storage\\FEEJ559W\\229391335_Overstory_structure_and_topographic_gradients_determining_diversity_and_abundance_of_.html},
   langid = {english}
+}
+
+@article{ozanneBiodiversityMeetsAtmosphere2003,
+  title = {Biodiversity {{Meets}} the {{Atmosphere}}: {{A Global View}} of {{Forest Canopies}}},
+  shorttitle = {Biodiversity {{Meets}} the {{Atmosphere}}},
+  author = {Ozanne, C. M. P. and Anhuf, D. and Boulter, S. L. and Keller, M. and Kitching, R. L. and Körner, C. and Meinzer, F. C. and Mitchell, A. W. and Nakashizuka, T. and Dias, P. L. Silva and Stork, N. E. and Wright, S. J. and Yoshimura, M.},
+  date = {2003-07-11},
+  journaltitle = {Science},
+  volume = {301},
+  pages = {183--186},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.1084507},
+  url = {https://science.sciencemag.org/content/301/5630/183},
+  urldate = {2020-09-28},
+  abstract = {The forest canopy is the functional interface between 90\% of Earth's terrestrial biomass and the atmosphere. Multidisciplinary research in the canopy has expanded concepts of global species richness, physiological processes, and the provision of ecosystem services. Trees respond in a species-specific manner to elevated carbon dioxide levels, while climate change threatens plant-animal interactions in the canopy and will likely alter the production of biogenic aerosols that affect cloud formation and atmospheric chemistry.},
+  eprint = {12855799},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2L9XDXPK\\Ozanne et al. - 2003 - Biodiversity Meets the Atmosphere A Global View o.pdf;C\:\\Users\\Me\\Zotero\\storage\\L2GNJBRA\\183.html},
+  langid = {english},
+  number = {5630}
 }
 
 @article{parkerCanopyLightTransmittance2002,
@@ -4702,6 +4788,13 @@ Leaf Traits/ Photosynthesis/Solar Radiation},
   doi = {10.1111/gcb.12439},
   abstract = {Extreme weather events, such as unusually hot or dry conditions, can cause death by exceeding physiological limits, and so cause loss of population. Survival will depend on whether or not susceptible organisms can find refuges that buffer extreme conditions. Microhabitats offer different microclimates to those found within the wider ecosystem, but do these microhabitats effectively buffer extreme climate events relative to the physiological requirements of the animals that frequent them? We collected temperature data from four common microhabitats (soil, tree holes, epiphytes and vegetation) located from the ground to canopy in primary rainforests in the Philippines. Ambient temperatures were monitored from outside of each microhabitat and from the upper forest canopy, which represent our macrohabitat controls. We measured the critical thermal maxima (CTmax ) of frog and lizard species, which are thermally sensitive and inhabit our microhabitats. Microhabitats reduced mean temperature by 1-2°C and reduced the duration of extreme temperature exposure by 14 to 31 times. Microhabitat temperatures were below the CTmax of inhabitant frogs and lizards, whereas macrohabitats consistently contained lethal temperatures. Microhabitat temperatures increased by 0.11 to 0.66°C for every 1°C increase in macrohabitat temperature, and this non-uniformity in temperature change influenced our forecasts of vulnerability for animal communities under climate change. Assuming uniform increases of 6°C, microhabitats decreased the vulnerability of communities by up to 32-fold, whereas under non-uniform increases of 0.66 to 3.96°C, microhabitats decreased the vulnerability of communities by up to 108-fold. Microhabitats have extraordinary potential to buffer climate and likely reduce mortality during extreme climate events. These results suggest that predicted changes in distribution due to mortality and habitat shifts that are derived from macroclimatic samples and that assume uniform changes in microclimates relative to macroclimates may be overly pessimistic. Nevertheless, even non-uniform temperature increases within buffered microhabitats would still threaten frogs and lizards. This article is protected by copyright. All rights reserved.},
   note = {Intorduction/Microclimate/Species endangered-extinct/Ecology}
+}
+
+@online{SeasonalDroughtRelated,
+  title = {Seasonal and Drought‐related Changes in Leaf Area Profiles Depend on Height and Light Environment in an {{Amazon}} Forest - {{Smith}} - 2019 - {{New Phytologist}} - {{Wiley Online Library}}},
+  url = {https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.15726},
+  urldate = {2020-09-28},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F5V5R8H8\\nph.html}
 }
 
 @article{senfCanopyMortalityHas2018,
